--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "description": "AI-powered building regulations and codes search assistant for architecture firms",
-  "keywords": ["building codes", "regulations", "AI assistant", "architecture", "compliance", "construction"],
+  "keywords": [
+    "building codes",
+    "regulations",
+    "AI assistant",
+    "architecture",
+    "compliance",
+    "construction"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,7 +31,7 @@
     "lucide-react": "^0.525.0",
     "mongoose": "^8.17.0",
     "next": "^14.2.31",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.11",
     "openai": "^5.8.2",
     "react": "^18",
     "react-dom": "^18",
